TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "128449130653072" [label="Start"];
  "128449130653072" -> "128449130647696";
  "128449130647696" [label="Code"];
  "128449130647696" -> "128449130653168";
  "128449130653168" [label="Function"];
  "128449130653168" -> "128449130650048";
  "128449130653168" -> "128449130652592";
  "128449130653168" -> "128449130647744";
  "128449130650048" [label="main IDENTIFIER"];
  "128449130652592" [label="Parameters"];
  "128449130647744" [label="Code"];
  "128449130647744" -> "128449130649136";
  "128449130647744" -> "128449130652016";
  "128449130649136" [label="Code"];
  "128449130649136" -> "128449130650336";
  "128449130650336" [label="Declaration"];
  "128449130650336" -> "128449130652784";
  "128449130650336" -> "128449130651584";
  "128449130652784" [label="x IDENTIFIER"];
  "128449130651584" [label="1 INT"];
  "128449130652016" [label="Code"];
  "128449130652016" -> "128449130650432";
  "128449130650432" [label="Declaration"];
  "128449130650432" -> "128449130651392";
  "128449130650432" -> "128449130651920";
  "128449130651392" [label="x IDENTIFIER"];
  "128449130651920" [label="2 INT"];
}
